# Datastructures-and-algo

./: .replit  README.md  pyproject.toml
Algorithms/Recursion/: Factorial.py  Fibonacci.py  Steps_problem.py  magic_index.py  min_cost_climb.py  pivot_index.py  robot_grid.py  robot_grid_obstacle.py  str_rev.py  subset.py
Algorithms/Sorting/: Bubble_sort.py  Insertion_sort.py  selection_sort.py
Big_O/: Readme.md  main.py
Data Structures/Big O/: Readme.txt.txt  Test.py
Data_Structures/: Readme.md
Data_Structures/Array/: Readme.md  array.py  array_class.py  contains_duplicate.py  max_subarray.py  merge_sorted.py  rotate_array.py  shift_zeros.py  str_reverse.py  two_sums.py
Data_Structures/Binary_search_Trees/: Intro.py
Data_Structures/Graphs/: Graph_implement.py
Data_Structures/Hash_Table/: Intro.py  Readme.md  recurring_character.py  two_sum.py
Data_Structures/Linked_list/: Double_linked.py  Introduction.py  reverse.py
Data_Structures/Stacks/: array_implement.py
Exercise/: List_prod.py  Min_val_list.py  common_val.py  min_domino_rot.py  pair_sum.py  palindrome.py
